--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-29 17:09+0300\n"
-"PO-Revision-Date: 2013-04-29 21:09+0200\n"
+"PO-Revision-Date: 2013-05-04 21:56+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -4371,7 +4371,7 @@ msgstr "Tipo de propiedad"
 #: ../code/application/views/helpfile/pofields.php~:826
 #, php-format
 msgid "The most popular"
-msgstr "Los más populares"
+msgstr "El más popular"
 
 #: ../code/application/views/city_view.php:106
 #: ../code/application/views/city_ajax_view.php:226
