--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-09 14:26+0300\n"
-"PO-Revision-Date: 2013-04-29 21:11+0200\n"
+"PO-Revision-Date: 2013-05-09 22:41+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -9525,6 +9524,12 @@ msgid ""
 "leave later and are open 24 hours a day. Please review the list of services "
 "offered by this particular property to confirm they are available."
 msgstr ""
+"Ebben az időpontban foglalhatja el szobáját érkezéskor, illetve a megadott "
+"időpontra el kell hagyni a szobát a távozás napján.  A legtöbb szálláson "
+"bizonságos helyen tudják tárolni csomagjait ha túl korán érkezik, vagy "
+"később tud távozni.  A szállások többsége 24 órán át nyitva tart.  Kérem, a "
+"kiválasztott szálláshely szolgáltatási közt ellenőrizze, hogy elérhetők-e a "
+"fenti szolgáltatások. "
 
 #: ../code/application/views/helpfile/pofields.php:831
 #, fuzzy, php-format
