--- a/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
@@ -9487,7 +9487,7 @@ msgstr "Informez-moi sur les offres et promo exclusives !"
 #: ../code/application/views/helpfile/pofields.php~:803
 #, php-format
 msgid "Save this property as a favorite"
-msgstr "Sauvegarder cette établissememt en tant que favori"
+msgstr "Sauvegarder cette établissement en tant que favori"
 
 #: ../code/application/views/helpfile/pofields.php:804
 #: ../code/application/views/helpfile/pofields.php~:804
